fix: scrollbar was too small

--- a/app/assets/stylesheets/youtube_videos.scss
+++ b/app/assets/stylesheets/youtube_videos.scss
@@ -34,7 +34,7 @@ body {
 @media screen and (-webkit-min-device-pixel-ratio:0)
 and (min-resolution:.001dpcm) {
   ::-webkit-scrollbar {
-      width: 5px;
+      width: 10px;
       height: 0;
   }
 
